# stellar-contract-wasms

./: .gitignore  Cargo.toml  Makefile  README.md  analyze_wasm.sh  find_rsver_1910.sh  find_rsver_1910_results.txt  wasm_import_mangling_report.txt
.scripts/dupe-specs/: Cargo.toml
.scripts/wikigen/: Cargo.toml
.scripts/wikigen/src/: main.rs
.scripts/wikigen/templates/: contract.html  index.html
analysis/: dupe-code.csv  dupe-sections.csv  dupe-specs.csv  dupe.csv  host-functions-imported.csv  host-functions-imported.json  host-functions-not-imported.csv  host-functions-not-imported.json  spec.csv  unique_imports.json
get-contracts-from-buckets/: Cargo.toml
list-buckets/: Cargo.toml
src/: main.rs
wasm_analysis/: 004dc6f0eb924b7e4fcb51cc4680f97603ca2c4e20bab54865ba8efc0a7db33f_objdump.txt  011c41afca8bb3d64635660beaa425c5f91c9fd0ca02f228d53a450f58ac50cd_objdump.txt  13e408b80433c7a12366f744020bbdbb8effbb16c4f76b063498e5e558f3270f_objdump.txt  18f37c4e1d980e53d8ec8fb7bcc28b0c6ed7eb5beea95c4af76c762c95f61332_objdump.txt  1d70be282a612751248f951fcfb75aa9d0d3f425a04136c089aeb6569d8e9b10_objdump.txt  2ae525f01dc69d900c3faac9276c6a8514e916325a39fdf27228b43341aa114a_objdump.txt  2bd0eeb781b2f570671aa980a1cd72b8b584f7420cade4706d3088a7f3e4a1fb_objdump.txt  2f6794570015e7de80623402126a700bc009f7f1cc5dc5823e4967e054cfe183_objdump.txt  3967b1e7a284bce179272f5f8826d02d73fa1cd0791c8e0764a48bafaaf62f17_objdump.txt  3b046d031d798a1068bc357892c61a678e1fb4125c3600b997bcf4752c35f25e_objdump.txt  401ec68c5aa2f56691b12407eedbf2ce6c24ce43bd9503a45cce6071ba2e63d0_objdump.txt  (+32 more)
(+24 files in other folders)
